<resources>
    <string name="app_name">Story App</string>
    <string name="error_unknown">error unknown</string>
    <string name="error_validation_login">Check your email, password, or internet connection!</string>
    <string name="error_validation_email_is_blank">Email is required!</string>
    <string name="error_validation_email_format_email_wrong">Incorrect email format!</string>
    <string name="error_validation_password_is_blank">Password is required!</string>
    <string name="error_password_less_6_char">The password must be at least 6 characters long!</string>
    <string name="error_validation_name_is_blank">Name is required!</string>
    <string name="error_validation_description_is_blank">Description is required!</string>
    <string name="error_validation_photo_is_blank">Photo is required!</string>
    <string name="error_internet_problem">Could not reach server, check your internet connection.</string>
    <string name="error_token_failed_to_save">Token failed to save!</string>
    <string name="error_not_authenticated">User not authenticated!</string>
    <string name="error_no_token_found">No Token, Please Login!</string>
    <string name="error_no_story_data">"No Story Data"</string>
    <string name="error_take_picture_failure">Take a picture failure!</string>
    <string name="error_failed_open_camera">Failed Open Camera!</string>
    <string name="error_permission_not_allowed">permission not allowed</string>
    <string name="please_take_a_photo">Please take a photo</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="list_story">List Story</string>
    <string name="camera_view">Camera View</string>
    <string name="add_story">Add Story</string>
    <string name="register_now">Register Now!</string>
    <string name="logout">Logout</string>
    <string name="description">Description</string>
    <string name="open_camera">Open Camera</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="created_at">Created at : </string>
    <string name="location_stories">Location Stories</string>
    <string name="detail">Detail Story</string>
    <string name="timeout">Timeout</string>
    <string name="retry">Retry</string>
    <string name="title_activity_main">MainActivity</string>
</resources>